--- a/ddp-workspace/projects/ddp-brugada/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/footer/footer.component.html
@@ -33,15 +33,9 @@
       </h4>
 
       <div>
-        <p
-          class="info text-bold"
-          [innerHTML]="'App.Footer.Contact.Email' | translate"
-        ></p>
+        <p class="info text-bold" [innerHTML]="'App.Footer.Contact.Email' | translate"></p>
 
-        <p
-          class="info text-bold"
-          [innerHTML]="'App.Footer.Contact.Phone' | translate"
-        ></p>
+        <p class="info text-bold" [innerHTML]="'App.Footer.Contact.Phone' | translate"></p>
 
         <p class="info" style="margin-top: 1.2rem">
           {{ 'App.Footer.Contact.Address1' | translate }}
