--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/error/error.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/error/error.component.html
@@ -8,9 +8,6 @@
       {{ 'App.Error.Paragraph1' | translate }}
     </p>
 
-    <p
-      class="page__paragraph"
-      [innerHTML]="'App.Error.Paragraph2' | translate"
-    ></p>
+    <p class="page__paragraph" [innerHTML]="'App.Error.Paragraph2' | translate"></p>
   </div>
 </div>
