--- a/ddp-workspace/projects/ddp-brugada/src/app/components/sign-in/sign-in.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/sign-in/sign-in.component.html
@@ -1,51 +1,41 @@
 <div [formGroup]="form" class="form">
   <div class="form-control">
     <label for="email">{{ 'Join.EmailLabel' | translate }}</label>
-    <input 
-      id="email"
-      type="text"   
-      formControlName="email"    
-      [placeholder]="'Join.EmailPlaceholder' | translate"
-    >
-    <div 
-      class="form-control-error"
-      *ngIf="form.get('email')?.touched && form.get('email')?.hasError('required')"
-    >
+    <input id="email" type="text" formControlName="email" [placeholder]="'Join.EmailPlaceholder' | translate" />
+    <div class="form-control-error" *ngIf="form.get('email')?.touched && form.get('email')?.hasError('required')">
       {{ 'Join.EmailLabel' | translate }} {{ 'Join.RequiredError' | translate }}
-    </div> 
-    <div 
-      class="form-control-error"
-      *ngIf="form.get('email')?.touched && form.get('email')?.hasError('pattern')"
-    >
+    </div>
+    <div class="form-control-error" *ngIf="form.get('email')?.touched && form.get('email')?.hasError('pattern')">
       {{ 'Join.ValidError' | translate }} {{ 'Join.EmailLabel' | translate }}
-    </div> 
+    </div>
   </div>
   <div class="form-control">
     <label for="password">{{ 'Join.PasswordLabel' | translate }}</label>
-    <input 
+    <input
       id="password"
-      type="password"   
-      formControlName="password"    
+      type="password"
+      formControlName="password"
       [placeholder]="'Join.PasswordPlaceholder' | translate"
-    >
-    <div 
-      class="form-control-error"
-      *ngIf="form.get('password')?.touched && form.get('password')?.hasError('required')"
-    >
+    />
+    <div class="form-control-error" *ngIf="form.get('password')?.touched && form.get('password')?.hasError('required')">
       {{ 'Join.PasswordLabel' | translate }} {{ 'Join.RequiredError' | translate }}
-    </div> 
-    <div 
-      class="form-control-error"
-      *ngIf="form.get('password')?.touched && form.get('password')?.hasError('minlength') && !form.get('password')?.hasError('pattern')"
-    >
-      {{ 'Join.PasswordLabel' | translate }} {{ 'Join.LengthMoreError' | translate }} {{ form.get('password').getError('minlength').requiredLength }}
     </div>
-    <div 
+    <div
+      class="form-control-error"
+      *ngIf="
+        form.get('password')?.touched &&
+        form.get('password')?.hasError('minlength') &&
+        !form.get('password')?.hasError('pattern')
+      "
+    >
+      {{ 'Join.PasswordLabel' | translate }} {{ 'Join.LengthMoreError' | translate }}
+      {{ form.get('password').getError('minlength').requiredLength }}
+    </div>
+    <div
       class="form-control-error"
       [innerHtml]="'Join.PasswordPatternError' | translate"
       *ngIf="form.get('password')?.touched && form.get('password')?.hasError('pattern')"
-    >
-    </div>
+    ></div>
   </div>
   <div class="form-control-error" *ngIf="error$ | async">
     {{ error$ | async }}
@@ -60,7 +50,10 @@
         <a [routerLink]="['/', Route.PasswordReset]">{{ 'Login.RestorePassword' | translate }}</a>
       </div>
       <div class="actions-block-sub">
-        <p>{{ 'Login.Register' | translate }} <a [routerLink]="['/', Route.Join]">{{ 'Login.RegisterLink' | translate }}</a></p>
+        <p>
+          {{ 'Login.Register' | translate }}
+          <a [routerLink]="['/', Route.Join]">{{ 'Login.RegisterLink' | translate }}</a>
+        </p>
       </div>
     </div>
   </div>
