--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/activity-page/activity-page.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/activity-page/activity-page.component.html
@@ -1,9 +1,5 @@
 <div class="activity-page">
   <div class="activity-page__container">
-    <app-activity
-      [studyGuid]="studyGuid"
-      [activityGuid]="instanceGuid"
-      (submit)="onSubmit($event)"
-    ></app-activity>
+    <app-activity [studyGuid]="studyGuid" [activityGuid]="instanceGuid" (submit)="onSubmit($event)"></app-activity>
   </div>
 </div>
