--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/forgot-password/forgot-password.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/forgot-password/forgot-password.component.html
@@ -10,15 +10,11 @@
           type="text"
           formControlName="email"
           [placeholder]="'App.ForgotPassword.EmailPlaceholder' | translate"
-        >
-        <mat-error
-          *ngIf="form.get('email')?.touched && form.get('email')?.hasError('required')"
-        >
+        />
+        <mat-error *ngIf="form.get('email')?.touched && form.get('email')?.hasError('required')">
           {{ 'App.ForgotPassword.EmailLabel' | translate }} {{ 'App.ForgotPassword.Errors.Required' | translate }}
         </mat-error>
-        <mat-error
-          *ngIf="form.get('email')?.touched && form.get('email')?.hasError('pattern')"
-        >
+        <mat-error *ngIf="form.get('email')?.touched && form.get('email')?.hasError('pattern')">
           {{ 'App.ForgotPassword.Errors.NotValid' | translate }} {{ 'App.ForgotPassword.EmailLabel' | translate }}
         </mat-error>
       </div>
