--- a/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-composite-answer/activityCompositeAnswer.component.html
+++ b/ddp-workspace/projects/ddp-sdk/src/lib/components/activityForm/answers/activity-composite-answer/activityCompositeAnswer.component.html
@@ -14,6 +14,7 @@
                 [block]="childBlock"
                 [readonly]="readonly"
                 [validationRequested]="validationRequested"
+                [studyGuid]="config.studyGuid"
                 (valueChanged)="updateValue(row, column, $event)"
                 (componentBusy)="componentBusy.next($event)">
             </ddp-activity-answer>
