--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -85,7 +85,7 @@
             </a>
             <a href="https://www.colonstars.org " target="_blank">
                 <img lazy-resource src="assets/images/Colon_Cancer_Stars_logo.jpg"
-                     [alt]="'App.ColorectalPage.Partners.Alts.FightCC' | translate" width="330px">
+                     [alt]="'App.ColorectalPage.Partners.Alts.ColonCancerStars' | translate" width="330px">
             </a>
         </div>
         <p class="text static-page-paragraph-text" [innerHTML]="'App.ColorectalPage.Partners.Text' | translate"></p>
