--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/home/home.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/home/home.component.scss
@@ -234,7 +234,7 @@
   }
 
   &__title {
-    margin-bottom: 4.2rem;
+    margin: 6.4rem 0 4.2rem;
 
     font-size: 2.8rem;
     text-align: center;
