DDP-6803 Add Colon Cancer Stars logo to colorectal page (#814)
* DDP-6803 Add Colon Cancer Stars logo to colorectal page

* DDP-6803 fix image alt

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -83,6 +83,10 @@
                      [alt]="'App.ColorectalPage.Partners.Alts.FightCC' | translate"
                      width="333" height="125">
             </a>
+            <a href="https://www.colonstars.org " target="_blank">
+                <img lazy-resource src="assets/images/Colon_Cancer_Stars_logo.jpg"
+                     [alt]="'App.ColorectalPage.Partners.Alts.ColonCancerStars' | translate" width="330px">
+            </a>
         </div>
         <p class="text static-page-paragraph-text" [innerHTML]="'App.ColorectalPage.Partners.Text' | translate"></p>
     </section>
