DDP-6807 Add Global Colon Cancer association to colorectal page

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -83,9 +83,13 @@
                      [alt]="'App.ColorectalPage.Partners.Alts.FightCC' | translate"
                      width="333" height="125">
             </a>
-            <a href="https://www.colonstars.org " target="_blank">
+            <a href="https://www.colonstars.org/" target="_blank">
                 <img lazy-resource src="assets/images/Colon_Cancer_Stars_logo.jpg"
                      [alt]="'App.ColorectalPage.Partners.Alts.ColonCancerStars' | translate" width="330px">
+            </a>
+            <a href="https://www.globalcca.org/" target="_blank">
+                <img lazy-resource src="assets/images/GCCA_logo.png"
+                     [alt]="'App.ColorectalPage.Partners.Alts.GCCA' | translate" width="330px">
             </a>
         </div>
         <p class="text static-page-paragraph-text" [innerHTML]="'App.ColorectalPage.Partners.Text' | translate"></p>
