DDP-6804 add google analytics

--- a/ddp-workspace/projects/ddp-brain/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-brain/src/app/components/welcome/welcome.component.html
@@ -111,11 +111,11 @@
                     <div>
                         <p class="socials__text" translate>HomePage.StayInformed.Text2</p>
                         <div>
-                            <a class="Link medium socials__facebook" (click)="sendSocialMediaAnalytics('twitter')"
+                            <a class="Link medium socials__facebook" (click)="sendSocialMediaAnalytics('facebook')"
                                 [href]="'https://www.facebook.com/' + facebookAccount" target="_blank"
                                 translate>HomePage.StayInformed.Facebook</a>
                             <a class="Link" [href]="'https://twitter.com/' + twitterAccount"
-                                (click)="sendSocialMediaAnalytics('facebook')" target="_blank"
+                                (click)="sendSocialMediaAnalytics('twitter')" target="_blank"
                                 translate>HomePage.StayInformed.Twitter</a>
                         </div>
                     </div>
