--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -7,6 +7,7 @@
                    [innerHTML]="'App.HomePage.IntroductionSection.Text' | translate"></p>
                 <a mat-flat-button
                    [routerLink]="'/' + AppRoutes.CountMeIn"
+                   (click)="sendCountMeInAnalytics()"
                    class="btn join-cmi-btn center button button_small"
                    color="primary">
                     {{'App.HomePage.JoinCountMeInButton' | translate}}
