--- a/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header" [ngClass]="{'panel-opened': isPanelOpened, 'header_shadow': isPageScrolled}">
     <div class="header-content">
-        <a class="project-logo" routerLink="/">
+        <a class="project-logo" routerLink="/" queryParamsHandling="merge">
             <img class="project-logo__img"
                  src="assets/images/logo.svg"
                  [alt]="'App.Header.Logo.ImageAlt' | translate">
