--- a/ddp-workspace/projects/ddp-brugada/src/app/pages/dashboard/dashboard.component.html
+++ b/ddp-workspace/projects/ddp-brugada/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="page">
   <div class="page__container">
-    <app-progress-bar></app-progress-bar>
+    <app-progress-bar [activities]="activities"></app-progress-bar>
     <h1 class="page__title">
       {{ 'App.Dashboard.Title' | translate }}
     </h1>
